<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/button_dot"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_margin="2dp"
        android:text="@string/decimal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/button0"
        app:layout_constraintHorizontal_chainStyle="spread"
        android:background="@drawable/button_background"/>

    <Button
        android:id="@+id/button0"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_margin="2dp"
        android:text="@string/zero"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button_dot"
        app:layout_constraintEnd_toStartOf="@+id/button_back"
        android:background="@drawable/button_background"/>

    <Button
        android:id="@+id/button_back"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_margin="2dp"
        android:text="@string/back"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button0"
        app:layout_constraintEnd_toStartOf="@+id/button_equal"
        android:background="@drawable/button_background"/>

    <Button
        android:id="@+id/button_equal"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_margin="2dp"
        android:text="@string/equals"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button_back"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@drawable/button_background"/>
    <Button
        android:id="@+id/button_add"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_margin="2dp"
        android:text="@string/add"
        app:layout_constraintBottom_toTopOf="@+id/button_equal"
        app:layout_constraintStart_toEndOf="@+id/button9"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@drawable/button_background"/>
    <Button
        android:id="@+id/button9"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_margin="2dp"
        android:text="@string/nine"
        app:layout_constraintBottom_toTopOf="@+id/button_back"
        app:layout_constraintStart_toEndOf="@+id/button8"
        app:layout_constraintEnd_toStartOf="@+id/button_add"
        android:background="@drawable/button_background"/>
    <Button
        android:id="@+id/button8"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_margin="2dp"
        android:text="@string/eight"
        app:layout_constraintBottom_toTopOf="@+id/button_back"
        app:layout_constraintStart_toEndOf="@+id/button7"
        app:layout_constraintEnd_toStartOf="@+id/button9"
        android:background="@drawable/button_background"/>
    <Button
        android:id="@+id/button7"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_margin="2dp"
        android:text="@string/seven"
        app:layout_constraintBottom_toTopOf="@+id/button_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/button8"
        android:background="@drawable/button_background"/>
    <Button
        android:id="@+id/button_subtract"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_margin="2dp"
        android:text="@string/subtract"
        app:layout_constraintBottom_toTopOf="@+id/button_add"
        app:layout_constraintStart_toEndOf="@+id/button6"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@drawable/button_background"/>
    <Button
        android:id="@+id/button6"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_margin="2dp"
        android:text="@string/six"
        app:layout_constraintBottom_toTopOf="@+id/button9"
        app:layout_constraintStart_toEndOf="@+id/button5"
        app:layout_constraintEnd_toStartOf="@+id/button_subtract"
        android:background="@drawable/button_background"/>
    <Button
        android:id="@+id/button5"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_margin="2dp"
        android:text="@string/five"
        app:layout_constraintBottom_toTopOf="@+id/button9"
        app:layout_constraintStart_toEndOf="@+id/button4"
        app:layout_constraintEnd_toStartOf="@+id/button6"
        android:background="@drawable/button_background"/>
    <Button
        android:id="@+id/button4"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_margin="2dp"
        android:text="@string/four"
        app:layout_constraintBottom_toTopOf="@+id/button9"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/button5"
        android:background="@drawable/button_background"/>
    <Button
        android:id="@+id/button_multiply"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_margin="2dp"
        android:text="@string/multiply"
        app:layout_constraintBottom_toTopOf="@+id/button_subtract"
        app:layout_constraintStart_toEndOf="@+id/button3"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@drawable/button_background"/>
    <Button
        android:id="@+id/button3"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_margin="2dp"
        android:text="@string/three"
        app:layout_constraintBottom_toTopOf="@+id/button6"
        app:layout_constraintStart_toEndOf="@+id/button2"
        app:layout_constraintEnd_toStartOf="@+id/button_multiply"
        android:background="@drawable/button_background"/>
    <Button
        android:id="@+id/button2"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_margin="2dp"
        android:text="@string/two"
        app:layout_constraintBottom_toTopOf="@+id/button6"
        app:layout_constraintStart_toEndOf="@+id/button1"
        app:layout_constraintEnd_toStartOf="@+id/button3"
        android:background="@drawable/button_background"/>
    <Button
        android:id="@+id/button1"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_margin="2dp"
        android:text="@string/one"
        app:layout_constraintBottom_toTopOf="@+id/button6"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/button2"
        android:background="@drawable/button_background"/>
    <Button
        android:id="@+id/button_divide"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_margin="2dp"
        android:text="@string/divide"
        app:layout_constraintBottom_toTopOf="@+id/button_multiply"
        app:layout_constraintStart_toEndOf="@+id/button_clear"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@drawable/button_background"/>
    <Button
        android:id="@+id/button_clear"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_margin="2dp"
        android:text="@string/clear"
        app:layout_constraintBottom_toTopOf="@+id/button_multiply"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/button_divide"
        android:background="@drawable/button_background"/>

    <TextView
        android:id="@+id/text_expression"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/init_expression"
        android:textSize="48sp"
        android:gravity="end"
        android:padding="8dp"
        app:layout_constraintTop_toBottomOf="@id/text_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/text_result"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/result"
        android:textSize="48sp"
        android:textStyle="bold"
        android:gravity="end"
        android:padding="8dp"
        app:layout_constraintTop_toBottomOf="@id/text_expression"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>
    <TextView
        android:id="@+id/text_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/calculadora_title"
        android:textSize="32sp"
        android:textStyle="bold"
        android:gravity="center"
        android:padding="16dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/text_expression"/>

</androidx.constraintlayout.widget.ConstraintLayout>